@@ -186,7 +186,7 @@ CATEGORIES :
                  const char*   get_string(size_t column_ndx, size_t row_ndx) const;
                  BinaryData    get_binary(size_t column_ndx, size_t row_ndx) const;
                  Mixed         get_mixed(size_t column_ndx, size_t row_ndx) const;
-                 ColumnType    get_mixed_type(size_t column_ndx, size_t row_ndx) const
+                 DataType      get_mixed_type(size_t column_ndx, size_t row_ndx) const
                  TableRef      get_subtable(size_t column_ndx, size_t row_ndx);
                  ConstTableRef get_subtable(size_t column_ndx, size_t row_ndx) const;
       CONST    : True
@@ -198,7 +198,7 @@ CATEGORIES :
         TYPES  : size_t
         DESCR  : The row index.
       RETURN:
-        TYPES  : [bool, int64_t, time_t, const char*, BinaryData, Mixed, ColumnType, TableRef, ConstTableRef]
+        TYPES  : [bool, int64_t, time_t, const char*, BinaryData, Mixed, DataType, TableRef, ConstTableRef]
         DESCR  : The value.
       EXAMPLES:
       - CODE   : ex_cpp_dyn_view_get_xxx
