@@ -13,6 +13,10 @@ Format:
 ==================
 
 
+2013-02-06 (Kristian Spangsege)
++ New enum DataType replaces ColumnType throughout the public API.
+
+
 2013-01-27 (Kristian Spangsege)
 + New Group::Group(unattached_tag) added. Same for SharedGroup.
 + New Group::open(...) methods added. Same for SharedGroup.
@@ -24,6 +28,7 @@ Format:
 2013-01-14 (Kristian Spangsege)
 - Group::set_shared() removed.
 - SharedGroup::is_valid() removed. Errors are now reported as exceptions from the constructor.
+
 
 2013-01-11 (Kristian Spangsege)
 + Simplified open-mode for Group constructor.
@@ -37,9 +42,11 @@ Format:
 + Mixed::set_int() added (same for other value types except subtables).
 + Removed two-argument Mixed constructor for binary data since its signature is expected to be used for strings that are not zero-terminated.
 
+
 2013-01-08 (Brian Munkholm)
 ----------
 + New: Added a bunch of methods to support two new column types: float and double.
+
 
 2012-12-16 (Kristian Spangsege)
 ----------
